# books-distribution

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
scripts/: entrypoint.sh  populate_db.sh  run_migrations.sh
src/: alembic.ini  apis.py  config.py  database.py  debugging.py  main.py  populate_db.py
src/auth/: __init__.py  services.py
src/authors/: controllers.py  services.py
src/books/: controllers.py  services.py
src/bulk_upload/: controllers.py  services.py
src/carts/: controllers.py  services.py
src/common/: decorators.py  exceptions.py  helper.py  schemas.py  utils.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 2025_02_02-39bc677068d9_create_books_authors_publsihers_table.py  2025_05_24-c325c39d6734_added_carts_and_orders.py  2025_06_05-944862477e4f_create_orders_table.py  2025_06_05-e5a93f4de7d6_rename_cart_id_cart_item_id_column.py  2025_06_14-378885c4b6dc_changing_book_id_to_string_and_added_.py  2025_06_14-3aa40f69442e_rename_to_total_amount_and_added_user_.py  2025_06_15-8e65906d9a5f_create_users_table.py  2025_06_18-7c611b7a0072_create_user_addresses_table.py
src/orders/: controllers.py  services.py
src/publishers/: controllers.py  services.py
src/repositories/: __init__.py  base.py
src/repositories/authors/: models.py  schemas.py
src/repositories/books/: models.py  schemas.py
src/repositories/carts/: models.py  schemas.py
src/repositories/helpers/: repository_helper.py
src/repositories/orders/: models.py  schemas.py
src/repositories/publishers/: models.py  schemas.py
src/repositories/user_addresses/: models.py  schemas.py
src/users/: controllers.py  services.py
(+11 files in other folders)
