[tool.poetry]
name = "books-distribution"
version = "0.1.0"
description = ""
authors = ["rohitpelago <rohit.jadhav@pelago.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
black = "^25.1.0"
alembic = "^1.14.1"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
