[tool.poetry]
name = "books-distribution"
version = "0.1.0"
description = ""
authors = ["rohitpelago <rohit.jadhav@pelago.co>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
black = "^25.1.0"
alembic = "^1.14.1"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
langcodes = "^3.5.0"
pre-commit = "^4.1.0"
python-multipart = "^0.0.20"
ruff = "0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
